--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -15,10 +15,14 @@
         <filter-name>SqlSessionFilter</filter-name>
         <filter-class>filters.SqlSessionFilter</filter-class>
     </filter>
-    <!--Currently filter emp management only -->
+    <!--Currently filter emp management and coupon -->
     <filter-mapping>
         <filter-name>SqlSessionFilter</filter-name>
         <url-pattern>/empManage/*</url-pattern>
+    </filter-mapping>
+    <filter-mapping>
+        <filter-name>SqlSessionFilter</filter-name>
+        <url-pattern>/coupon/*</url-pattern>
     </filter-mapping>
     <session-config>
         <session-timeout>
