--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -15,13 +15,19 @@
         <filter-name>SqlSessionFilter</filter-name>
         <filter-class>filters.SqlSessionFilter</filter-class>
     </filter>
+    <filter>
+        <filter-name>UserFilter</filter-name>
+        <filter-class>filters.UserFilter</filter-class>
+    </filter>
     <!--Currently filter emp management and coupon -->
     <filter-mapping>
-        <filter-name>SqlSessionFilter</filter-name>
-        <url-pattern>/empManage/*</url-pattern>
+        <filter-name>UserFilter</filter-name>
+        <url-pattern>/couponAppStaff.jsp</url-pattern>
+        <url-pattern>/coupon/*</url-pattern>
     </filter-mapping>
     <filter-mapping>
         <filter-name>SqlSessionFilter</filter-name>
+        <url-pattern>/empManage/*</url-pattern>
         <url-pattern>/coupon/*</url-pattern>
     </filter-mapping>
     <session-config>
